@@ -1,3 +1,5 @@
+* Remove required on Party name
+
 Version 3.8.0 - 2015-11-02
 * Bug fixes (see mercurial logs for details)
 * Change Party.lang into Property
